--- a/Day_3/Homework/Day_3.ipynb
+++ b/Day_3/Homework/Day_3.ipynb
@@ -1,39 +1,34 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "ytGIZQ2Uwnl5"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
       "cell_type": "markdown",
-      "source": [
-        "#Bai_1\n"
-      ],
       "metadata": {
         "id": "IU09LBolwt7d"
-      }
+      },
+      "source": [
+        "#Bai_1\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0qb3v3VEwylK",
+        "outputId": "d06435ae-76ec-4b20-b149-8f5f03b392bf"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1 2 3 4 1 4\n",
+            "1.0, 2.0, 3.0,4.0, 1.0, 4.0, la toa do cua mot tam giac\n"
+          ]
+        }
+      ],
       "source": [
         "#Su dung ham map() va float de ep kieu du lieu sang so thuc\n",
         "x1, y1, x2, y2, x3, y3 = map(float, input().split())\n",
@@ -45,37 +40,41 @@
         "else:\n",
         "   #Neu dieu kien sai thi xuat thong bao\n",
         "   print(\"{}, {}, {},{}, {}, {}, la toa do cua mot tam giac\".format(x1, y1, x2, y2, x3, y3))\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "0qb3v3VEwylK",
-        "outputId": "d06435ae-76ec-4b20-b149-8f5f03b392bf"
-      },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1 2 3 4 1 4\n",
-            "1.0, 2.0, 3.0,4.0, 1.0, 4.0, la toa do cua mot tam giac\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#Bai_2"
-      ],
       "metadata": {
         "id": "EfH15CuDxD2t"
-      }
+      },
+      "source": [
+        "#Bai_2"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AXARKRraxFb-",
+        "outputId": "4f6f3f29-9a85-4ddb-a5ca-64bd97c371d1"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Nhập số nguyên dương n (2 <= n <=100): 2\n",
+            "Nhập số nguyên dương m (m >= 3): 3\n",
+            "nhập vào một số nguyên dương có từ 6 chữ số trở nên: 123456\n",
+            "123654\n",
+            "nhập vào một số nguyên dương có từ 6 chữ số trở nên: 456789\n",
+            "456987\n"
+          ]
+        }
+      ],
       "source": [
         "n = int(input(\"Nhập số nguyên dương n (2 <= n <=100): \"))\n",
         "m = int(input(\"Nhập số nguyên dương m (m >= 3): \"))\n",
@@ -90,41 +89,44 @@
         "    s = input(\"nhập vào một số nguyên dương có từ 6 chữ số trở nên: \");\n",
         "     # Đảo chiều m số cuối cùng của từng số nguyên và in ra kết quả\n",
         "    print(s[:-m] + s[:m - 1:-1])"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "AXARKRraxFb-",
-        "outputId": "4f6f3f29-9a85-4ddb-a5ca-64bd97c371d1"
-      },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Nhập số nguyên dương n (2 <= n <=100): 2\n",
-            "Nhập số nguyên dương m (m >= 3): 3\n",
-            "nhập vào một số nguyên dương có từ 6 chữ số trở nên: 123456\n",
-            "123654\n",
-            "nhập vào một số nguyên dương có từ 6 chữ số trở nên: 456789\n",
-            "456987\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#Bai_3\n"
-      ],
       "metadata": {
         "id": "S3XOOoxtxGc0"
-      }
+      },
+      "source": [
+        "#Bai_3\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Leyg-RE-xIP0",
+        "outputId": "c53529c1-7217-4501-f59c-321736282a6b"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Nhập vào một số học sinh k: 2\n",
+            "Nhập Tên: Tiến\n",
+            "Nhập điêmt thường xuyên 1: 50\n",
+            "Nhập điêmt thường xuyên 2: 60\n",
+            "Tiến 110 Khá\n",
+            "Nhập Tên: Đông\n",
+            "Nhập điêmt thường xuyên 1: 70\n",
+            "Nhập điêmt thường xuyên 2: 90\n",
+            "Đông 160 Giỏi\n"
+          ]
+        }
+      ],
       "source": [
         "k = int(input(\"Nhập vào một số học sinh k: \"))\n",
         "\n",
@@ -145,50 +147,20 @@
         "    else:\n",
         "       result = \"Yếu\"\n",
         "       print(name, sum, result)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Leyg-RE-xIP0",
-        "outputId": "c53529c1-7217-4501-f59c-321736282a6b"
-      },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Nhập vào một số học sinh k: 2\n",
-            "Nhập Tên: Tiến\n",
-            "Nhập điêmt thường xuyên 1: 50\n",
-            "Nhập điêmt thường xuyên 2: 60\n",
-            "Tiến 110 Khá\n",
-            "Nhập Tên: Đông\n",
-            "Nhập điêmt thường xuyên 1: 70\n",
-            "Nhập điêmt thường xuyên 2: 90\n",
-            "Đông 160 Giỏi\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#Bai_4"
-      ],
       "metadata": {
         "id": "BmKDLUuEz0nl"
-      }
+      },
+      "source": [
+        "#Bai_4"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "x = int(input(\"Nhập giá trị của x (số xu): \"))\n",
-        "if x>=1: print(\"No\")\n",
-        "else: print(\"Yes\")\n",
-        "\n"
-      ],
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -196,17 +168,36 @@
         "id": "gZkoEk5yz2sZ",
         "outputId": "166ad07a-9e3c-47d2-c915-0a3ce4867bde"
       },
-      "execution_count": 5,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Nhập giá trị của x (số xu): 19\n",
             "No\n"
           ]
         }
+      ],
+      "source": [
+        "x = int(input(\"Nhập giá trị của x (số xu): \"))\n",
+        "if x>=1: print(\"No\")\n",
+        "else: print(\"Yes\")\n",
+        "\n"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
